--- a/templates/admin/keys.html
+++ b/templates/admin/keys.html
@@ -742,6 +742,9 @@
                             `/admin/api_keys/${keyId}`,
                             {
                                 method: "DELETE",
+                                headers: {
+                                    "X-CSRFToken": getCSRFToken(),
+                                },
                             }
                         );
 
